--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon"  href="/src/android-chrome-192x192.png" />
+    <title>CEM</title>
     
     
   </head>
